# rbd

./: .gitignore  .play.dJy4TA  Binary.cpp  Binary.h  Bit.cpp  Bit.h  CMakeLists (copy).txt  CMakeLists.txt  Contextor.cpp  Dockerfile  EpsilonNet.cbp  HEcmp.cpp  HEcmp.h  Point.cpp  Point.h  Project.cbp  README.md  aux.cpp  aux.h  auxClasses.py  auxEncFuncs.py  chosen  compare2numbers.cpp  coreset.csv  docker-compose.yaml  epsNet  ex1.cpp  ex1.py  fcout  genPoints.py  imp1_kmeans.cpp  imp1_kmeans.h  kaka  kmeans.py  means  means_test  play  points  points.csv  points_2d_20191105  (+7 more)
20202807_kmeanscode/: requirements.txt
20202807_kmeanscode/impl/: KeysServer.h  aux.cpp  aux.h  imp1_kmeans.cpp  imp1_kmeans.h
20202807_kmeanscode/impl/tests/: KeysServer_test.cpp  KeysServer_test.h  Point_test.cpp  aux_test.cpp  imp1_kmeans_test.cpp  imp1_kmeans_test.h
20202807_kmeanscode/impl/yonis/: client.py
20202807_kmeanscode/pies/: genPointsForCpp.py  heReps.py  makePlots.py
impl/: Binary.cpp  Binary.h  KeysServer.cpp  KeysServer.h  Point.cpp  Point.h  PointExtended_old.cpp  PointExtended_old.h  Point_old.cpp  Point_old.h  SKeys.cpp  SKeys.h  Skeys.cpp  Skeys.h  aux.cpp  aux.h  imp1_kmeans.cpp  imp1_kmeans.h  imp1_kmeans_3laa.cpp  properties.h
impl/tests/: Binary_test.cpp  Binary_test.h  Bit_test.h  KeysServer_test.cpp  KeysServer_test.h  Point_test.cpp  Point_test.h  Skeys_test.cpp  Skeys_test.h  aux_test.cpp  aux_test.h  imp1_kmeans_test.cpp  imp1_kmeans_test.h  run_tests.cpp  run_tests.h
impl/yonis/: run1meancore.cpp  run1meancore.h  server.py  simulator.py
io/: chosen  leftover  means  points  points_test  random_means
old/: Binary.cpp  Binary.h  Bit.cpp  Bit.h  Contextor.cpp  HEcmp.cpp  HEcmp.h  PointExtended_old.cpp  PointExtended_old.h  Point_old.cpp  Point_old.h  Skeys.cpp  Skeys.h  Test_binaryCompare.cpp  compare2numbers.cpp  ex1.cpp  findM.cpp
old/tests/: Binary_test.cpp  Binary_test.h  Bit_test.cpp  Bit_test.h  Skeys_test.cpp  Skeys_test.h
old_pseudo_python_code/: auxClasses.py  auxEncFuncs.py  genPoints.py  kmeans.py
pies/: genPoints.py  genPointsForCpp.py  heRepresents.py  makePlots.py  points_file_copy  quickSelect.py
